WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34805
[V8] Perf regression in V8DOMWrapper::instantiateV8Object()
https://bugs.webkit.org/show_bug.cgi?id=34805
Summary
[V8] Perf regression in V8DOMWrapper::instantiateV8Object()
Nate Chapin
Reported
2010-02-10 10:41:47 PST
I introduced a performance regression in
http://trac.webkit.org/changeset/54499
. It can be fixed by providing a split similar to what had existed previously: one path for objects that might be constructed in a WorkerContext, and a fast path for objects that are never in a WorkerContext.
Attachments
patch
(7.69 KB, patch)
2010-02-10 11:24 PST
,
Nate Chapin
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2010-02-10 11:24:23 PST
Created
attachment 48512
[details]
patch Performance on the DOM benchmark suite with this patch is comparable to a build with 54499 reverted, and dromaeo performance appears to be slightly better.
anton muhin
Comment 2
2010-02-10 11:33:37 PST
Thanks a lot, Nate. Only one thing---instantiate in worker context tells me that it must be a worker context, however it looks like it's possibly a worker context. If it's correct, could you give some other name. The ugly idea I have is in possible worker context.
Nate Chapin
Comment 3
2010-02-10 11:37:49 PST
(In reply to
comment #2
)
> Thanks a lot, Nate. > > Only one thing---instantiate in worker context tells me that it must be a > worker context, however it looks like it's possibly a worker context. > > If it's correct, could you give some other name. The ugly idea I have is in > possible worker context.
Yeah, I debated the name. Perhaps instantiateV8ObjectMaybeInWorkerContext?
anton muhin
Comment 4
2010-02-10 11:38:59 PST
(In reply to
comment #3
)
> (In reply to
comment #2
) > > Thanks a lot, Nate. > > > > Only one thing---instantiate in worker context tells me that it must be a > > worker context, however it looks like it's possibly a worker context. > > > > If it's correct, could you give some other name. The ugly idea I have is in > > possible worker context. > > Yeah, I debated the name. Perhaps instantiateV8ObjectMaybeInWorkerContext?
Yep, something like that. Thanks.
Dimitri Glazkov (Google)
Comment 5
2010-02-11 09:34:33 PST
Comment on
attachment 48512
[details]
patch ok. I was so happy for this code to be gone. Oh well.
Nate Chapin
Comment 6
2010-02-12 10:30:02 PST
http://trac.webkit.org/changeset/54680
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug