2010-02-11  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Add back in a fast path for v8 object wrapping
        when it's not possible we're in a WorkerContext (the fast
        path is important for performance).

        https://bugs.webkit.org/show_bug.cgi?id=34805

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::instantiateV8ObjectInWorkerContext):
        (WebCore::V8DOMWrapper::instantiateV8Object):
        * bindings/v8/V8DOMWrapper.h:


Canonical link: https://commits.webkit.org/45990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54680 268f45cc-cd09-0410-ab3c-d52691b4dbfc