WebCore/bindings/scripts/CodeGeneratorV8.pm
@@ -513,15 +513,28 @@ sub GenerateSetDOMException
     return $result;
 }
 
+sub IsSubType
+{
+    my $dataNode = shift;
+    my $parentType = shift;
+    return 1 if ($dataNode->name eq $parentType);
+    foreach (@allParents) {
+        my $parent = $codeGenerator->StripModule($_);
+        return 1 if $parent eq $parentType;
+    }
+    return 0;
+}
+
 sub IsNodeSubType
 {
     my $dataNode = shift;
-    return 1 if ($dataNode->name eq "Node");
-    foreach (@allParents) {
-        my $parent = $codeGenerator->StripModule($_);
-        return 1 if $parent eq "Node";
-    }
-    return 0;
+    return IsSubType($dataNode, "Node");
+}
+
+sub IsEventSubType
+{
+    my $dataNode = shift;
+    return IsSubType($dataNode, "Event");
 }
 
 sub GenerateDomainSafeFunctionGetter
@@ -1936,8 +1949,12 @@ sub GenerateToV8Converters
 
 v8::Handle<v8::Object> ${className}::wrap(${nativeType}* impl${forceNewObjectInput}) {
   v8::Handle<v8::Object> wrapper;
+END
+    if (!MayBeInWorkerContext($dataNode, $interfaceName)) {
+        push(@implContent, <<END);
   V8Proxy* proxy = 0;
 END
+    }
 
     if (IsNodeSubType($dataNode)) {
         push(@implContent, <<END);
@@ -1975,10 +1992,16 @@ END
     context->Enter();
 END
     }
-    
-    push(@implContent, <<END);
+
+    if (MayBeInWorkerContext($dataNode, $interfaceName)) {
+        push(@implContent, <<END);
+  wrapper = V8DOMWrapper::instantiateV8ObjectInWorkerContext(${wrapperType}, impl);
+END
+    } else {
+        push(@implContent, <<END);
   wrapper = V8DOMWrapper::instantiateV8Object(proxy, ${wrapperType}, impl);
 END
+    }
 
     if (IsNodeSubType($dataNode)) {
         push(@implContent, <<END);
@@ -2024,6 +2047,35 @@ v8::Handle<v8::Value> toV8(${nativeType}* impl${forceNewObjectInput}) {
 }
 END
     }
+}
+
+sub MayBeInWorkerContext {
+    # These objects can be constructed under WorkerContextExecutionProxy. They need special
+    # handling, since if we call V8Proxy::retrieve(), we will crash.
+    # FIXME: websocket?
+    my $dataNode = shift;
+    my $interfaceName = shift;
+    # FIXME: Doing the extra work to handle the WorkerContext case for all Event
+    # types is sad. We can probably be cleverer and only do the extra work for certain types.
+    return 1 if IsEventSubType($dataNode);
+    return 1 if $interfaceName eq "DOMCoreException";
+    return 1 if $interfaceName eq "EventException";
+    return 1 if $interfaceName eq "RangeException";
+    return 1 if $interfaceName eq "XMLHttpRequestException";
+    return 1 if $interfaceName eq "MessagePort";
+    return 1 if $interfaceName eq "DedicatedWorkerContext";
+    return 1 if $interfaceName eq "WorkerContext";
+    return 1 if $interfaceName eq "SharedWorkerContext";
+    return 1 if $interfaceName eq "WorkerLocation";
+    return 1 if $interfaceName eq "WorkerNavigator";
+    return 1 if $interfaceName eq "Notification";
+    return 1 if $interfaceName eq "NotificationCenter";
+    return 1 if $interfaceName eq "XMLHttpRequest";
+    return 1 if $interfaceName eq "WebSocket";
+    return 1 if $interfaceName eq "Worker";
+    return 1 if $interfaceName eq "SharedWorker";
+    return 1 if $interfaceName eq "EventSource";
+    return 0;
 }
 
 sub HasCustomToV8Implementation {
@@ -2308,17 +2360,6 @@ sub IsRefPtrType
     return 0 if $type eq "SVGAnimatedPoints";
 
     return 1;
-}
-
-sub IsWorkerClassName
-{
-    my $class = shift;
-    return 1 if $class eq "V8Worker";
-    return 1 if $class eq "V8WorkerContext";
-    return 1 if $class eq "V8WorkerLocation";
-    return 1 if $class eq "V8WorkerNavigator";
-
-    return 0;
 }
 
 sub GetNativeType
